Revision history for exact

{{$NEXT}}

1.16      2021-02-05 03:07:56-08:00 America/Los_Angeles
        - Set Syntax::Keyword::Try minimum version to 0.18

1.15      2021-02-04 15:41:42-08:00 America/Los_Angeles
        - Add export() and exportable() methods
        - Switch from Try::Tiny to Syntax::Keyword::Try

1.14      2021-01-10 15:43:05-08:00 America/Los_Angeles
        - Migrate to Test2::V0
        - Improve .gitignore file
        - License migrate to Artistic 2.0
        - Migrate Travis CI and Coveralls to GitHub Actions and Codecov
        - Update copyright year

1.13      2020-07-17 20:16:34-07:00 America/Los_Angeles
        - Fix for "use open" not being exported

1.12      2019-11-05 09:17:12-08:00 America/Los_Angeles
        - Fix for Carp methods not being exported properly

1.11      2019-10-18 13:18:58-07:00 America/Los_Angeles
        - Prevent duplicate add_isa() calls

1.10      2019-10-06 16:27:22-07:00 America/Los_Angeles
        - Add inheritance capability
        - Add monkey_patch, add_isa, no_parent, and late_parent methods
        - Remove autoclean method

1.09      2019-08-22 16:20:27-07:00 America/Los_Angeles
        - Changed to use "-" prepending flags for compile check w00t
        - Add back dist.ini components

1.08      2019-08-08 15:09:15-07:00 America/Los_Angeles
        - Replaced TryCatch with Try::Tiny to reduce dependency load
        - Set minimum Perl version to 14

1.07      2019-08-08 06:44:27-07:00 America/Los_Angeles
        - POD bug fixes

1.06      2019-07-25 15:15:06-07:00 America/Los_Angeles
        - Extensions support
        - Carp methods import
        - TryCatch integration
        - Include support for UTF8
        - Autoclean method for parameter input
        - Update feature sets to include Perl 5.30

1.05      2018-06-21 16:16:55-07:00 America/Los_Angeles
        - Reverse use of strictures in favor of strict/warnings

1.04      2018-06-20 12:31:51-07:00 America/Los_Angeles