@@ -1,7 +1,9 @@
 use Test2::V0;
 use exact qw( nobundle switch state );
 
-like( dies { say $^V }, qr/Can't locate object method "say"/, 'say' );
-ok( lives { state $x }, 'state' ) or note $@;
+eval 'say $^V';
+ok( length($@) > 0, 'say include skipped' );
+
+ok( lives { state $x }, 'state included ok' ) or note $@;
 
 done_testing;
